--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/customer_management
 spring.datasource.username=postgres
 spring.datasource.password=sawti
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.format_sql=true
